# CpuRenderer

./: .gitignore  README.md
CpuRenderer/: CMakeLists.txt
CpuRenderer/include/: camera.h  color.h  math_util.h  matrix4.h  mesh.h  point2d.h  renderer.h  test.h  texture.h  vector3.h  vertex.h  viewport.h
CpuRenderer/src/: color.cpp  main.cpp  matrix4.cpp  mesh.cpp  renderer.cpp  texture.cpp  vector3.cpp  viewport.cpp
